# ChangeLog for net-www/mod_watch
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/mod_watch/ChangeLog,v 1.6 2004/11/04 08:16:46 urilith Exp $

  04 Nov 2004; Michael Tindal <urilith@gentoo.org> mod_watch-3.18.ebuild,
  mod_watch-3.18.ebuild, mod_watch-4.03.ebuild:
  IUSE fixes.

  14 Sep 2004; Stuart Herbert <stuart@gentoo.org> mod_watch-4.03.ebuild:
  Fix for bug #60221; thanks to magnet

  04 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  mod_watch-4.03.ebuild:
  Masked mod_watch-4.03.ebuild stable for ppc

*mod_watch-4.03 (21 Apr 2004)

  21 Apr 2004; Chuck Short <zul@gentoo.org> metadata.xml,
  mod_watch-3.18.ebuild, mod_watch-4.03.ebuild:
  Added metadata.xml, Updated header.

*mod_watch-4.03 (21 Apr 2004)

  21 Apr 2004; Chuck Short <zul@gentoo.org> mod_watch-4.03.ebuild:
  Added apache2 version of mod_watch. Closes #43644.

*mod_watch-3.18 (22 Jun 2003)

  22 Jun 2003; Donny Davies <woodchip@gentoo.org> mod_watch-3.18.ebuild,
  files/mod_watch.conf:
  Initial import; from #14806.