@@ -1,0 +1,33 @@
+<IfDefine WATCH>
+  <IfModule !mod_watch.c>
+    LoadModule watch_module    modules/mod_watch.so
+  </IfModule>
+</IfDefine>
+<IfModule mod_watch.c>
+  # Allows the URL used to query virtual host data:
+  #
+  #	http://www.snert.com/watch-info
+  #
+  <Location /watch-info>
+  SetHandler watch-info
+  </Location>
+
+  # Allows the URL used to query file owner and web
+  # server data:
+  #
+  #	http://www.snert.com/~achowe/watch-info
+  #	http://www.snert.com/~SERVER/watch-info
+  #
+  <Location /~*/watch-info>
+  SetHandler watch-info
+  </Location>
+
+  # Intended for debugging and analysis of shared memory
+  # hash table and weenie files:
+  #
+  #	http://www.snert.com/watch-table
+  #
+  <Location /watch-table>
+  SetHandler watch-table
+  </Location>
+</IfModule>
