@@ -2,4 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>apache</herd>
+<maintainer>
+  <email>apache-devs@gentoo.org</email>
+</maintainer>
 </pkgmetadata>
