@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_watch/mod_watch-4.03.ebuild,v 1.5 2004/11/04 08:16:46 urilith Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_watch/mod_watch-4.03.ebuild,v 1.6 2005/01/09 12:20:14 hollow Exp $
 
 DESCRIPTION="Bandwidth graphing for Apache with MRTG"
 HOMEPAGE="http://www.snert.com/Software/mod_watch/"
