@@ -1,6 +1,12 @@
 # ChangeLog for net-www/mod_watch
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_watch/ChangeLog,v 1.6 2004/11/04 08:16:46 urilith Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_watch/ChangeLog,v 1.7 2005/01/09 12:20:14 hollow Exp $
+
+*mod_watch-4.03-r1 (09 Jan 2005)
+
+  09 Jan 2005; Benedikt Boehm <hollow@gentoo.org> metadata.xml,
+  +files/77_mod_watch.conf, +mod_watch-4.03-r1.ebuild:
+  Apache herd package refresh
 
   04 Nov 2004; Michael Tindal <urilith@gentoo.org> mod_watch-3.18.ebuild,
   mod_watch-3.18.ebuild, mod_watch-4.03.ebuild:
